--- a/MongoCTLite.Tests/MongoCTLite.Tests.csproj
+++ b/MongoCTLite.Tests/MongoCTLite.Tests.csproj
@@ -11,9 +11,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="35.6.3" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Shouldly" Version="4.3.0" />
+        <PackageReference Include="Testcontainers.MongoDb" Version="4.7.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -25,5 +27,4 @@
     <ItemGroup>
       <ProjectReference Include="..\MongoCTLite\MongoCTLite.csproj" />
     </ItemGroup>
-
 </Project>
