--- a/MongoCTLite.Tests/MongoCTLite.Tests.csproj
+++ b/MongoCTLite.Tests/MongoCTLite.Tests.csproj
@@ -11,7 +11,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Bogus" Version="35.6.3" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Shouldly" Version="4.3.0" />
@@ -26,5 +25,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MongoCTLite\MongoCTLite.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MongoCTLite.SourceGeneration\MongoCTLite.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 </Project>
